# piano_trainer

./: PRD.md  main.py  pyproject.toml  pytest.ini  run.sh
app/: __init__.py  layout.py
app/keyboard/: profiles.py  renderer.py
app/lessons/: curriculum.py  db.py  exercise.py  models.py
app/midi/: __init__.py  bridge.py  midi_js.py
app/pages/: __init__.py  flashcards.py  home.py  lesson_detail.py  lessons.py  practice.py  progress.py  settings.py
app/staff/: drill.py  renderer.py
tests/: conftest.py  test_drill_click.py  test_flashcards.py  test_keyboard.py  test_lessons.py  test_midi_bridge.py  test_midi_js.py  test_pages.py  test_practice.py  test_staff.py
